--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,19 @@ baseURL = 'https://example.com/'
 title = 'Panduza'
 theme = 'hugo-book'
 
+[module]
+    # replacements = "github.com/Panduza/lotusdocs -> lotusdocs"
+    [[module.imports]]
+        path = "github.com/Panduza/lotusdocs"
+        disable = false
+    [[module.imports]]
+        path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
+        disable = false
+
+[markup.goldmark.renderer]
+    unsafe = true
+
+
 [params]
   # (Optional, default light) Sets color theme: light, dark or auto.
   # Theme 'auto' switches between dark and light modes based on browser/os preferences
