--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,6 +43,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Install go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod' # The Go version to download (if necessary) and use.
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
@@ -55,6 +59,7 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
+            --noChmod \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
