--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/Panduza/panduza-dev-zone'
+# baseURL = 'https://github.com/Panduza/panduza-dev-zone'
 title = 'Panduza - Dev Zone'
 
 [module]
