--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -61,7 +61,7 @@ jobs:
           hugo \
             --noChmod \
             --minify \
-            --baseURL "${{ steps.deployment.outputs.page_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
