--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -45,7 +45,7 @@ featureGrid:
 
   items:
     - title: Open Source
-      icon: speed
+      icon: public 
       description: Panduza is an open-source project that is free to use and modify. You can run Panduza on your own infrastructure or use our hosted service.
       # ctaLink:
       #   text: learn more
@@ -66,7 +66,7 @@ featureGrid:
       #   url: /docs/
 
     - title: Fast
-      icon: open_run
+      icon: speed
       description: Build in Rust, Panduza is designed to be fast and efficient.
       # ctaLink:
       #   text: learn more
